# log-parser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy-image.yml  test.yml
extensions/prometheus/: cli.py
log_parser/: __init__.py  cli.py  log_parser.py
test/: test_cli.py  test_log_parser.py
