[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "log_parser"
version = "1.1.0"
description = "A simple asynchronous log file parsing library"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
keywords = ["log", "parser", "async", "asynchronous"]
authors = [{name="Misha Schwartz", "email"="mschwa@cs.toronto.edu"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["anyio~=4.6.0"]

[project.optional-dependencies]
dev = ["ruff", "pre-commit"]
test = ["pytest", "pytest-timeout", "pytest-mock"]

[project.scripts]
log-parser = "log_parser.cli:main"

[tool.setuptools]
packages = ["log_parser"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "I", "ANN"]
ignore = ["D100", "D104", "D417", "ANN002", "ANN003"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"test/**.py" = ["D", "ANN"]
